--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.1.1",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "axios": "^1.2.1",
     "bootstrap": "^5.1.0",
+    "js-cookie": "^3.0.1",
+    "mapbox-gl": "^2.14.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-image-gallery": "^1.2.11",
+    "react-js-pagination": "^3.0.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.5"
   },
   "devDependencies": {
